# invest_blog_rest_api

./: .gitignore  README.md  pyproject.toml
blog/: permissions.py  settings.py  urls.py
education/: admin.py  models.py  serializers.py  urls.py  views.py
education/migrations/: 0001_initial.py  0002_mentor_fullname.py  0003_alter_mentor_fullname.py  0004_auto_20210818_2007.py  0005_student.py  0006_alter_student_courses.py
education/tests/: test_api.py  test_models.py  test_views.py
